--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
-    <string name="rssi_textview_default">No Devices Found</string>
+    <string name="rssi_textview_default">Average RSSI: </string>
     <string name="start_scan">开始扫描</string>
     <string name="stop_scan">停止扫描</string>
 </resources>
