--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="rssi_textview_default">Average RSSI: </string>
     <string name="start_scan">开始扫描</string>
     <string name="stop_scan">停止扫描</string>
+    <string name="distance">距离: </string>
 </resources>
