--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="device_1">设备2：</string>
     <string name="device_2">设备3：</string>
     <string name="data_processing">处理数据</string>
+    <string name="settings">设置</string>
+    <string name="confirm_settings">确认</string>
 </resources>
