--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="start_scan">开始扫描</string>
     <string name="stop_scan">停止扫描</string>
     <string name="distance">距离</string>
+    <string name="device">设备</string>
     <string name="device_0">设备1：</string>
     <string name="device_1">设备2：</string>
     <string name="device_2">设备3：</string>
