--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="device_2">设备3：</string>
     <string name="data_processing">处理数据</string>
     <string name="settings">设置</string>
-    <string name="confirm_settings">确认</string>
+    <string name="device_addr">MAC地址</string>
+    <string name="device_position">坐标</string>
+    <string name="confirm_settings">确定</string>
 </resources>
