--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,8 @@
     <string name="device_1">设备2：</string>
     <string name="device_2">设备3：</string>
     <string name="data_processing">处理数据</string>
-    <string name="data_saving">保存数据</string>
+    <string name="data_export">导出数据</string>
+    <string name="data_import">导入数据</string>
     <string name="settings">设置</string>
     <string name="device_addr">MAC地址</string>
     <string name="device_position">坐标</string>
