--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">IndoorApplication</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="app_name">NI室内定位</string>
+    <string name="title_home">蓝牙信息</string>
+    <string name="title_dashboard">数据采集</string>
+    <string name="title_notifications">数据处理</string>
     <string name="rssi_textview_default">平均RSSI: </string>
     <string name="start_scan">开始扫描</string>
     <string name="stop_scan">停止扫描</string>
